[gd_scene load_steps=2 format=3 uid="uid://b2ob6eych510j"]

[ext_resource type="Script" path="res://Menu/Scripts/transition_menu.gd" id="1_grw8v"]

[node name="TransitionMenu" type="Panel"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_grw8v")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -463.5
offset_top = 48.0
offset_right = 463.5
offset_bottom = 648.0
grow_horizontal = 2

[node name="VariablePanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="VariableLabel" type="Label" parent="VBoxContainer/VariablePanelContainer"]
layout_mode = 2
text = "Blending Transition Effects"
horizontal_alignment = 1

[node name="HeaderHBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(35, 31)
layout_mode = 2
text = "#"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(175, 0)
layout_mode = 2
text = "Name"
horizontal_alignment = 1

[node name="PanelContainer10" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer10"]
layout_mode = 2
text = "Variable"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(115, 31)
layout_mode = 2
text = "Self Transition
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer4" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer4"]
custom_minimum_size = Vector2(130, 31)
layout_mode = 2
text = "Event Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer5" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer5"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Duration"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer6" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer6"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "ToGenTime"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer7" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer7"]
custom_minimum_size = Vector2(115, 31)
layout_mode = 2
text = "Flags"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer8" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer8"]
custom_minimum_size = Vector2(115, 31)
layout_mode = 2
text = "End Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer9" type="PanelContainer" parent="VBoxContainer/HeaderHBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeaderHBoxContainer/PanelContainer9"]
custom_minimum_size = Vector2(115, 31)
layout_mode = 2
text = "Blend Curve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(0, 490)
layout_mode = 2
vertical_scroll_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer2/ScrollContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/PanelContainer2/ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AddTransition" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Transition"

[node name="RemoveTransition" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Transition"

[connection signal="pressed" from="VBoxContainer/ButtonContainer/AddTransition" to="." method="_on_add_transition_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/RemoveTransition" to="." method="_on_remove_transition_pressed"]
